<resources>
    <string name="app_name">Nuokkari App</string>
    <string name="tapahtumat">Tapahtumat</string>
    <string name="kayttaja">Käyttäjä</string>
    <string name="lis_tapahtuma">LISÄÄ UUSI TAPAHTUMA</string>
    <string name="kirjaudu_sis_n">KIRJAUDU SISÄÄN</string>
    <string name="title_activity_login">Kirjaudu sisään</string>
    <string name="profile">Profiili</string>
    <string name="save_changes">Tallenna muutokset</string>
    <string name="logout">Kirjaudu ulos</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Salasana</string>
    <string name="prompt_name">Nimi</string>
    <string name="prompt_number">Puhelinnumero</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Luo käyttäjä</string>
    <string name="new_user">Luo uusi käyttäjä</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Kirjautuminen epäonnistui"</string>
    <string name="tapahtuma">Tapahtuma</string>
    <string name="sijainti">Sijainti</string>
    <string name="p_iv_m_r">Päivämäärä</string>
    <string name="loppuaika">Loppuaika</string>
    <string name="alkuaika">Alkuaika</string>
    <string name="ik_haarukka_lk">Ikähaarukka (lk)</string>
    <string name="kuvaus">Kuvaus</string>
    <string name="k_ynnist_tapahtuma">Käynnistä tapahtuma</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
</resources>
